deployment/base/db-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: languagedepot
  labels:
    app: db
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 5432

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: languagedepot
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
      type: Recreate
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        ports:
          - containerPort: 5432
        # https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
        readinessProbe:
            exec:
              command:
                - pg_isready
                - '-U'
                - postgres
            failureThreshold: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 200Mi
          limits:
            memory: 200Mi

        volumeMounts:
        - name: data
#          this must end with /data, if it just ends with /postgresql the database will get wiped out on restart
          mountPath: /var/lib/postgresql/data

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: db-data # established in pvc.yaml
