deployment/base/fw-headless-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  name: fw-headless
  namespace: languagedepot
  labels:
    app: fw-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: fw-headless
  ports:
  - name: http
    protocol: TCP
    port: 80

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fw-headless
  namespace: languagedepot
  labels:
    app: fw-headless
spec:
  selector:
    matchLabels:
      app: fw-headless
  strategy:
    type: Recreate
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: fw-headless
    spec:
      securityContext:
        runAsGroup: 33
        runAsUser: 33
        runAsNonRoot: true
      containers:
      - name: fw-headless
        image: ghcr.io/sillsdev/lexbox-fw-headless:develop
        imagePullPolicy: IfNotPresent
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 1500Mi
          limits:
            memory: 2400Mi
        startupProbe:
          httpGet:
            port: 80
            path: /api/healthz
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 5
        ports:
          - containerPort: 80

        volumeMounts:
        - name: fw-headless
          mountPath: /var/lib/fw-headless

      volumes:
      - name: fw-headless
        persistentVolumeClaim:
          claimName: fw-headless # established in pvc.yaml
