deployment/base/lexbox-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
apiVersion: v1
kind: Service
metadata:
  name: lexbox
  namespace: languagedepot
  labels:
    app: lexbox
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: lexbox
  ports:
  - name: http
    protocol: TCP
    port: 5158
  - name: otel
    protocol: TCP
    port: 4318
  - name: otel-grpc
    protocol: TCP
    port: 4317

---

# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#writing-a-deployment-spec
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lexbox
  namespace: languagedepot
  labels:
    app: lexbox
spec:
  selector:
    matchLabels:
      app: lexbox
  progressDeadlineSeconds: 80
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    # https://kubernetes.io/docs/concepts/workloads/pods/#pod-templates
    metadata:
      labels:
        app: lexbox
    spec:
      securityContext:
        runAsGroup: 33
        runAsUser: 33
        runAsNonRoot: true
      containers:
      - name: lexbox-api
        image: ghcr.io/sillsdev/lexbox-api:develop
        imagePullPolicy: IfNotPresent
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 300Mi
          limits:
            memory: 350Mi
        startupProbe:
          httpGet:
            port: 5158
            path: /api/healthz
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            port: 5158
            path: /api/healthz
          initialDelaySeconds: 300
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 5
        ports:
          - containerPort: 5158

        volumeMounts:
        - name: repos
          mountPath: /hg-repos
        - name: oauth-signing-cert
          mountPath: /oauth-certs/signing
          readOnly: true
        - name: oauth-signing-cert-last-seen
          mountPath: /oauth-certs/signing-last-seen
          readOnly: true
        - name: oauth-signing-cert-previous
          mountPath: /oauth-certs/signing-previous
          readOnly: true
        - name: oauth-encryption-cert
          mountPath: /oauth-certs/encryption
          readOnly: true
        - name: oauth-encryption-cert-last-seen
          mountPath: /oauth-certs/encryption-last-seen
          readOnly: true
        - name: oauth-encryption-cert-previous
          mountPath: /oauth-certs/encryption-previous
          readOnly: true

      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:0.101.0
        args:
          - "--config"
          - "/etc/otelcol-contrib/config.yaml"
          - "--config"
          - "env:COLLECTOR_CONFIG_OVERRIDE"
        # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
        resources:
          requests:
            memory: 100Mi
          limits:
            memory: 100Mi
        ports:
          - containerPort: 4318
          - containerPort: 4317
        volumeMounts:
          - mountPath: /etc/otelcol-contrib
            name: otel-config
            readOnly: true

      volumes:
      - name: repos
        persistentVolumeClaim:
          claimName: hg-repos # established in hg-repos-pvc.yaml
      - name: otel-config
        configMap:
          name: otel-config
          items:
            - key: collector-config.yaml
              path: config.yaml
      - name: oauth-signing-cert
        secret:
          secretName: oauth-signing-cert
          optional: true
      - name: oauth-signing-cert-last-seen
        secret:
          secretName: oauth-signing-cert-last-seen
          optional: true
      - name: oauth-signing-cert-previous
        secret:
          secretName: oauth-signing-cert-previous
          optional: true
      - name: oauth-encryption-cert
        secret:
          secretName: oauth-encryption-cert
          optional: true
      - name: oauth-encryption-cert-last-seen
        secret:
          secretName: oauth-encryption-cert-last-seen
          optional: true
      - name: oauth-encryption-cert-previous
        secret:
          secretName: oauth-encryption-cert-previous
          optional: true
