deployment/base/proxy-deployment.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  namespace: languagedepot
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
# each host here is patched by index, so don't change the order of them in this file without changing the patch files (ingress-config.yaml)
  - host: localhost
    http: #a copy of this is also in the prod version to support lexbox.org, please keep them in sync :(
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http
      - path: /hg
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http
      - path: /security.txt
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http
      - path: /.well-known
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http
      - path: /v1/traces
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: otel
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              name: sveltekit
  - host: hg.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http
  - host: resumable.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http
  - host: admin.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lexbox
            port:
              name: http

  tls:
  - hosts:
    - localhost
    - hg.localhost
    - resumable.localhost
    - admin.localhost
    secretName: languagedepot-tls # provided by LTOps
